# BoCA

./: .directory  .gitignore  .kdev_include_paths  Analysis.kdev4  AnalysisHiggsCpv_8hh.html  AnalysisHiggsCpv_8hh__dep__incl.map  AnalysisHiggsCpv_8hh__dep__incl.md5  AnalysisHiggsCpv_8hh__incl.map  AnalysisHiggsCpv_8hh__incl.md5  AnalysisHiggsCpv_8hh_source.html  Analysis_8hh-example.html  Authors.md  Authors_8md.html  Barn_8cpp.html  Barn_8cpp__incl.map  Barn_8cpp__incl.md5  Barn_8hh.html  Barn_8hh__dep__incl.map  Barn_8hh__dep__incl.md5  Barn_8hh__incl.map  Barn_8hh__incl.md5  Barn_8hh_source.html  Bdt_8cpp.html  Bdt_8cpp__incl.map  Bdt_8cpp__incl.md5  Bdt_8hh.html  Bdt_8hh__dep__incl.map  Bdt_8hh__dep__incl.md5  Bdt_8hh__incl.map  Bdt_8hh__incl.md5  Bdt_8hh_source.html  Boca_8dox.html  Boson_8cpp.html  Boson_8cpp__incl.map  Boson_8cpp__incl.md5  BottomBase_8cpp.html  BottomBase_8cpp__incl.map  BottomBase_8cpp__incl.md5  BottomBase_8hh.html  BottomBase_8hh__dep__incl.map  (+6640 more)
HDiscriminator/: CMakeLists.txt  HAnalysis.cpp  HAnalysis.hh  HAnalysisDiscriminator.cpp  HAnalysisDiscriminator.hh  HBranchDiscriminator.cpp  HBranchDiscriminator.hh  HDiscriminatorLinkDef.hh  HFactory.cpp  HMva.cpp  HMva.hh  HMvaDiscriminator.cpp  HMvaDiscriminator.hh  HReader.cpp  main.cpp
HDiscriminator/include/: HAnalysisDiscriminator.hh  HBranchDiscriminator.hh  HDiscriminatorLinkDef.hh  HJetDiscriminator.hh  HMvaDiscriminator.hh
HDiscriminator/source/: CMakeLists.txt  HAnalysisDiscriminator.cpp  HBranchDiscriminator.cpp  HFactory.cpp  HJetDiscriminator.cpp  HJetDiscriminatorMain.cpp  HMvaDiscriminator.cpp  HReader.cpp  Reader.cpp  main.cpp
HHeavyHiggs/: CMakeLists.txt  HAnalysis.cpp  HAnalysis.hh  HAnalysisHeavyHiggs.cpp  HAnalysisHeavyHiggs.hh  HAnalysisHeavyHiggsDelphes.cpp  HAnalysisHeavyHiggsDelphes.hh  HAnalysisHeavyHiggsParton.cpp  HAnalysisHeavyHiggsPgs.cpp  HFactory.cpp  HMvaHeavyHiggs.cpp  HReader.cpp  MainDelphes.cpp  main.cpp
HHeavyHiggs/include/: Branch.hh  HAnalysisChargedHiggsMva.hh  HAnalysisHeavyHiggsDelphes.hh  HAnalysisHeavyHiggsMva.hh  HAnalysisHeavyHiggsParton.hh  HAnalysisHeavyHiggsPgs.hh  HAnalysisHeavyHiggsTt.hh  HAnalysisTau.hh  HBranchHeavyHiggs.hh  HChargedEventSemiTagger.hh  HChargedHadronicTagger.hh  HChargedLeptonicTagger.hh  HChargedSemi2Tagger.hh  HChargedSemiTagger.hh  HChargedSignatureSemiTagger.hh  HEventHadronicTagger.hh  HEventLeptonicTagger.hh  HEventSemiTagger.hh  HEventTagger.hh  HEventTtSemiTagger.hh  HHadronicEventTagger.hh  HHeavyHiggsEvent.hh  HLeptonicEventTagger.hh  HLinkDefHeavyHiggs.hh  HMixedEventTagger.hh  HMvaEvent.hh  HMvaHeavyHiggs.hh  HOctet.hh  HOctet44.hh  HOctet44Event.hh  HSextetEvent.hh  HSignatureSemiTagger.hh  MultipletEvent.hh  Octet62.hh  SextetEvent.hh
HHeavyHiggs/source/: CMakeLists.txt  HAnalysisChargedHiggsMva.cpp  HAnalysisHeavyHiggsDelphes.cpp  HAnalysisHeavyHiggsMva.cpp  HAnalysisHeavyHiggsParton.cpp  HAnalysisHeavyHiggsPgs.cpp  HAnalysisHeavyHiggsTt.cpp  HAnalysisTau.cpp  HBranchHeavyHiggs.cpp  HChargedEventSemiTagger.cpp  HChargedHadronicTagger.cpp  HChargedLeptonicTagger.cpp  HChargedSemi2Tagger.cpp  HChargedSemiTagger.cpp  HChargedSignatureSemiTagger.cpp  HEventHadronicTagger.cpp  HEventLeptonicTagger.cpp  HEventSemiTagger.cpp  HEventTagger.cpp  HEventTtSemiTagger.cpp  HHadronicEventTagger.cpp  HHeavyHiggsEvent.cpp  HLeptonicEventTagger.cpp  HMixedEventTagger.cpp  HMvaEvent.cpp  HMvaHeavyHiggs.cpp  HOctet.cpp  HOctet44.cpp  HOctet44Event.cpp  HSextetEvent.cpp  HSignatureSemiTagger.cpp  MainCharged.cpp  MainDelphes.cpp  MainFactory.cpp  MainMva.cpp  MainNeutral.cpp  MainParton.cpp  MainPgs.cpp  MainReader.cpp  MainTau.cpp  (+3 more)
HHeavyHiggsParton/: CMakeLists.txt  HAnalysis.cpp  HAnalysis.hh  HAnalysisHeavyHiggsParton.cpp
HJetProperties/: CMakeLists.txt  HAnalysisJetProperties.cpp  HAnalysisJetProperties.hh  HJetPropertiesBranch.cpp  HJetPropertiesBranch.hh  HJetPropertiesLinkDef.hh  main.cpp
HTest/: CMakeLists.txt  HAnalysisTest.cpp  HAnalysisTest.hh  HBranchLinkDef.hh  HBranchTest.cpp  HBranchTest.hh  main.cpp
examples/: CMakeLists.txt  Examples.dox
examples/Cut/: Analysis.hh
examples/cut/: CMakeLists.txt  MainCut.cpp  Tagger.hh
root/: CMakeLists.txt  HBranch.cpp  HBranch.hh  HLinkDef.hh
source/: Analysis.cpp  AnalysisBase.cpp  AnalysisCopy.cpp  AnalysisStandardModel.cpp  BosonTagger.cpp  BottomTagger.cpp  Branch.cpp  BranchTagger.cpp  Branches.cpp  Browser.cpp  CMakeLists.txt  Canvas.cpp  ChargedHiggsLeptonicTagger.cpp  ChargedHiggsSemiTagger.cpp  ClonesArrays.cpp  ClusterSequence.cpp  Colors.cpp  Configuration.cpp  Constituent.cpp  Debug.cpp  DetectorGeometry.cpp  Discriminator.cpp  Doublet.cpp  DoubletTagger.cpp  Event.cpp  EventShape.cpp  EventShapes.cpp  EventTagger.cpp  Exception.cpp  Factory.cpp  Family.cpp  File.cpp  FileInfo.cpp  Files.cpp  Font.cpp  FourVector.cpp  Global.cpp  GlobalObservables.cpp  GlobalTagger.cpp  Graph.cpp  (+166 more)
source/analysis/: AnalysisBase.cpp  Base.cpp  CMakeLists.txt
source/branch/: Base.cpp  Bdt.cpp  CMakeLists.txt  Cut.cpp  Event.cpp  EventShapes.cpp  EventShapesBase.cpp  Global.cpp  GlobalBase.cpp  Info.cpp  Multi.cpp  Particle.cpp  Result.cpp  Signature.cpp  ThreeBody.cpp  TwoBody.cpp
source/delphes/: CMakeLists.txt  DelphesClasses.cc  DelphesFactory.cc  Event.cpp  Hadrons.cpp  Leptons.cpp  Partons.cpp
source/event/: CMakeLists.txt  Delphes.cpp  Event.cpp  EventShapes.cpp  ExRoot.cpp  HemisphereMasses.cpp
source/exroot/: CMakeLists.txt  Event.cpp  ExRootClasses.cc  ExRootTreeBranch.cc  ExRootTreeReader.cc  ExRootTreeWriter.cc  Hadrons.cpp  Leptons.cpp  Partons.cpp  TreeBranch.cc  TreeBranch.cpp  TreeReader.cc  TreeWriter.cc  TreeWriter.cpp
source/fastjet/: CMakeLists.txt  ClusterSequence.cpp  InfoRecombiner.cpp  NSubJettiness.cpp  PseudoJet.cpp  SubJettiness.cpp
source/generic/: CMakeLists.txt  Debug.cpp  Exception.cpp  Options.cpp  Types.cpp
source/identification/: CMakeLists.txt  Constituent.cpp  Family.cpp  Id.cpp  Member.cpp  MomentumRange.cpp  PreCuts.cpp  Tag.cpp
source/io/: Browser.cpp  CMakeLists.txt  FileInfo.cpp  FileWriter.cpp  Io.cpp  Source.cpp  (+4 more)
(+8561 files in other folders)
