add_subdirectory(branch)
add_subdirectory(tagger)

set(AnalysisSources
TopPartner.cpp
TruthVariables.cpp
)
create_library(AnalysisTopPartner AnalysisSources)

create_executable(TopPartnerSingleLeptonic MainSingleLeptonic.cpp)
create_executable(TopPartnerSingleHadronic MainSingleHadronic.cpp)
create_executable(TopPartnerPair MainPair.cpp)
create_executable(TopPartnerEffective MainEffective.cpp)
create_executable(TopPartnerPairHiggs MainPairHiggs.cpp)
create_executable(TopPartnerNewPair MainNewPair.cpp)
create_executable(TopPartnerTruth MainTruth.cpp)
create_executable(TopPartnerSubDom MainSubDom.cpp)
